--- a/UserInterface/login.html
+++ b/UserInterface/login.html
@@ -30,5 +30,6 @@
             </div>
         </div>
     </div>
+    <a href="https://localhost:5001/swagger/index.html" class="position-fixed bottom-0 end-0 p-3 text-muted" style="text-decoration: none;">Api Documentation</a>
 </body>
 </html>
