--- a/UserInterface/index.html
+++ b/UserInterface/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <style>
+      .tabulator-tableholder{
+        overflow: hidden !important;
+      }
+    </style>
     <!-- Tabulator CDN -->
     <link href="https://unpkg.com/tabulator-tables@5.0.7/dist/css/tabulator.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.0.7/dist/js/tabulator.min.js"></script>
 
     <!-- JQuery CDN -->
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -25,20 +29,23 @@
             <h2 class="card-header text-center">Users</h2>
             <div class="card-body">
                 <div class="row mb-4">
-                <div class="col-4">
-                    <button type="button" class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#addModel">
-                    Add
-                    </button>
+                  <div class="col-3">
+                    <button id="getdatabtn" type="button" class="btn btn-success w-100">Load Data</button>
+                  </div>
+                  <div class="col-3">
+                      <button id="addbtn" type="button" class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#addModel">
+                      Add
+                      </button>
+                  </div>
+                  <div class="col-3">
+                      <button id="updatebtn" type="button" class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#updateModel">
+                      Update
+                      </button>
+                  </div>
+                  <div class="col-3">
+                      <button id="deletebtn" type="button" class="btn btn-danger w-100" data-bs-toggle="modal" data-bs-target="#deleteModel">Delete</button>
+                  </div>
                 </div>
-                <div class="col-4">
-                    <button type="button" class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#updateModel">
-                    Update
-                    </button>
-                </div>
-                <div class="col-4">
-                    <button type="button" class="btn btn-danger w-100">Delete</button>
-                </div>
-            </div>
                 <div id="example-table" class="table"></div>
             </div>
         </div>
@@ -74,35 +81,207 @@
         </div>
     </div>
 
-    <!-- Add Toast Message -->
+    <!-- Modal(Update) -->
+    <div class="modal fade" id="updateModel" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Update User</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="mb-3">
+              <input type="text" class="form-control" id="inputUpdateId" placeholder="Id">
+            </div>
+            <div class="mb-3">
+              <input type="text" class="form-control" id="inputUpdateUserName" placeholder="UserName">
+            </div>
+            <div class="mb-3">
+              <input type="password" class="form-control" id="inputUpdatePassword" placeholder="Password">
+            </div>
+            <div class="mb-3">
+              <input type="text" class="form-control" id="inputUpdateName" placeholder="Name">
+            </div>
+            <div class="mb-3">
+              <input type="text" class="form-control" id="inputUpdateSurName" placeholder="Surname">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button id="btnAdd" type="button" class="btn btn-primary">Update</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal(Delete) -->
+    <div class="modal fade" id="deleteModel" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Update User</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="mb-3">
+              <input disabled type="text" class="form-control" id="inputDeleteUserName" placeholder="UserName">
+            </div>
+            <div class="mb-3">
+              <input disabled type="password" class="form-control" id="inputDeletePassword" placeholder="Password">
+            </div>
+            <div class="mb-3">
+              <input disabled type="text" class="form-control" id="inputDeleteName" placeholder="Name">
+            </div>
+            <div class="mb-3">
+              <input disabled type="text" class="form-control" id="inputDeleteSurName" placeholder="Surname">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button id="btnAdd" type="button" class="btn btn-primary">Delete</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Load Data Message -->
     <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-        <div id="addToast" class="toast" style="color: white;" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
+      <div id="loadDataToast" class="toast bg-success" style="color: white;" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="1500">
+        <div class="toast-header">
+          <i class="fas fa-check-circle me-2"></i>
+          <strong class="me-auto">Kayıtlar Getiriliyor..</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Success Add Toast Message -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+        <div id="addToast" class="toast bg-success" style="color: white;" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
           <div class="toast-header">
             <i class="fas fa-check-circle me-2"></i>
             <strong class="me-auto">Başarılı</strong>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
           </div>
           <div class="toast-body">
-            Hello, world! This is a toast message.
+            Kayıt Eklendi..
           </div>
         </div>
     </div>
 
+    <!-- Error Add Toast Message -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+      <div id="addToast" class="toast bg-danger" style="color: white;" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
+        <div class="toast-header">
+          <i class="fas fa-check-circle me-2"></i>
+          <strong class="me-auto">Başarısız</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+          Kayıt Eklenemedi..
+        </div>
+      </div>
+    </div>
+
+    <!-- Success Update Toast Message -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+      <div id="addToast" class="toast bg-success" style="color: white;" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
+        <div class="toast-header">
+          <i class="fas fa-check-circle me-2"></i>
+          <strong class="me-auto">Başarılı</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+          Hello, world! This is a toast message.
+        </div>
+      </div>
+    </div>
+
+    <!-- Error Update Toast Message -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+      <div id="addToast" class="toast bg-danger" style="color: white;" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
+        <div class="toast-header">
+          <i class="fas fa-check-circle me-2"></i>
+          <strong class="me-auto">Başarılı</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+          Hello, world! This is a toast message.
+        </div>
+      </div>
+    </div>
+
+    <!-- Success Delete Toast Message -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+      <div id="addToast" class="toast bg-success" style="color: white;" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
+        <div class="toast-header">
+          <i class="fas fa-check-circle me-2"></i>
+          <strong class="me-auto">Başarılı</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+          Hello, world! This is a toast message.
+        </div>
+      </div>
+    </div>
+
+    <!-- Error Delete Toast Message -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+      <div id="addToast" class="toast bg-danger" style="color: white;" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
+        <div class="toast-header">
+          <i class="fas fa-check-circle me-2"></i>
+          <strong class="me-auto">Başarılı</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+          Hello, world! This is a toast message.
+        </div>
+      </div>
+    </div>
+
     <script>
-        var tabledata = [
-          
-        ];
+        
         var table = new Tabulator("#example-table", {
             height:300,
-            data:tabledata, //assign data to table
             layout:"fitColumns",
-            columns:[ //Define Table Columns
-                {title:"Id", field:"Id"},
-                {title:"User Name", field:"UserName"},
-                {title:"Password", field:"Password"},
-                {title:"Name", field:"Name"},
-                {title:"Surname", field:"Surname"},
+            placeholder: "No Data Set",
+            selectable:true,
+            columns:[
+                {title:"Id", field:"id"},
+                {title:"User Name", field:"userName"},
+                {title:"Password", field:"password"},
+                {title:"Name", field:"name"},
+                {title:"Surname", field:"surName"},
             ]
+        });
+
+        $('#getdatabtn').click(()=>{
+          table.setData("https://localhost:5001/api/users/getall");
+          var toast = new bootstrap.Toast($('#loadDataToast'));
+          toast.show()
+        });
+
+        table.on("rowSelectionChanged", function(data, rows){
+          $('#updatebtn').click(()=>{
+            data.forEach(element => {
+              console.log(element);
+              $('#inputUpdateId').val(element.id);
+              $('#inputUpdateUserName').val(element.userName);
+              $('#inputUpdatePassword').val(element.password);
+              $('#inputUpdateName').val(element.name);
+              $('#inputUpdateSurName').val(element.surName);
+            });
+          })
+          $('#deletebtn').click(()=>{
+            data.forEach(element => {
+              console.log(element);
+              $('#inputDeleteId').val(element.id);
+              $('#inputDeleteUserName').val(element.userName);
+              $('#inputDeletePassword').val(element.password);
+              $('#inputDeleteName').val(element.name);
+              $('#inputDeleteSurName').val(element.surName);
+            });
+          })
         });
     </script>
 </body>
