--- a/UserInterface/login.html
+++ b/UserInterface/login.html
@@ -11,25 +11,40 @@
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- FontAweSome CDN -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
     <title>Login Page</title>
 </head>
 <body>
-    <div class="container p-5 w-50">
-        <div class="card">
-            <h5 class="card-header text-center">Login Page</h5>
-            <div class="card-body">
-              <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-                  <label for="floatingInput">User Name</label>
-              </div>
-              <div class="form-floating mb-3">
-                  <input type="password" class="form-control" id="floatingInput" placeholder="name@example.com">
-                  <label for="floatingInput">Password</label>
-              </div>
-              <a href="#" class="btn btn-primary" style="float: right;">Login</a>
+    <div class="container w-50 mt-5">
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <div class="card mt-5">
+                    <h5 class="card-header text-center">Login Page</h5>
+                    <div class="card-body">
+                      <div class="form-floating mb-3">
+                          <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+                          <label for="floatingInput"><i class="fas fa-user"></i> User Name</label>
+                      </div>
+                      <div class="form-floating mb-3">
+                          <input type="password" class="form-control" id="floatingInput" placeholder="name@example.com">
+                          <label for="floatingInput"><i class="fas fa-key"></i> Password</label>
+                      </div>
+                      <a href="#" id="loginbtn" class="btn btn-primary" style="float: right;">Login</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <a href="https://localhost:5001/swagger/index.html" class="position-fixed bottom-0 end-0 p-3 text-muted" style="text-decoration: none;">Api Documentation</a>
+    <a href="https://localhost:5001/swagger/index.html" class="position-fixed bottom-0 end-0 p-3 text-muted" style="text-decoration: none;">API Documentation</a>
+    <script>
+        
+        $('#loginbtn').click(() => {
+            window.location.href = "index.html";
+        });
+       
+    </script>
 </body>
 </html>
